--- a/chuyende/chuyende/Public/css/Use/xacnhan.css
+++ b/chuyende/chuyende/Public/css/Use/xacnhan.css
@@ -1,20 +1,12 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f0f0f0;
-}
-
-.container {
-    background-color: #fff;
+﻿.otp-container {
+    width: 350px;
+    margin: 50px auto;
     padding: 20px;
+    border: 1px solid #ccc;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
     text-align: center;
-    width: 300px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
@@ -29,12 +21,13 @@ p {
 }
 
 .otp-input {
-    width: 100%;
+    width: 90%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
     margin-bottom: 20px;
+    text-align: center;
     box-sizing: border-box;
 }
 
@@ -50,6 +43,6 @@ p {
     transition: background-color 0.3s;
 }
 
-.confirm-btn:hover {
-    background-color: #1b00cc;
-}
+    .confirm-btn:hover {
+        background-color: #1b00cc;
+    }
