--- a/chuyende/chuyende/Views/Login/Index.cshtml
+++ b/chuyende/chuyende/Views/Login/Index.cshtml
@@ -18,15 +18,20 @@
         <form action="/Login/Index" method="post">
             <div class="form-group">
                 <label for="email" class="form-label">Email hoặc số điện thoại</label>
-                <input type="text" id="email" name="email" class="form-control" placeholder="Nhập email hoặc số điện thoại" >
+                <input type="text" id="email" name="email" class="form-control" placeholder="Nhập email hoặc số điện thoại">
             </div>
 
             <div class="form-group">
                 <label for="password" class="form-label">Mật khẩu</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Nhập mật khẩu" >
+                <div class="password-wrapper" style="position: relative; display: flex; align-items: center;">
+                    <input type="password" id="password" name="password" class="form-control" placeholder="Nhập mật khẩu">
+                    <button type="button" class="toggle-password" style="position: absolute; right: 10px; background: none; border: none;">
+                        <i class="fa fa-eye-slash"></i>
+                    </button>
+                </div>
             </div>
 
-            <a href="/quen-mat-khau" class="forgot-password">Quên mật khẩu?</a>
+            <a href="@Url.Action("ForgotPassword","Login")" class="forgot-password">Quên mật khẩu?</a>
 
             <button type="submit" class="btn-login">Đăng nhập</button>
         </form>
@@ -36,3 +41,20 @@
         </div>
     </div>
 </div>
+<script>
+    document.querySelector(".toggle-password").addEventListener("click", function () {
+        let passwordField = document.getElementById("password");
+        let icon = this.querySelector("i");
+
+        if (passwordField.type === "password") {
+            passwordField.type = "text";
+            icon.classList.remove("fa-eye-slash");
+            icon.classList.add("fa-eye");
+        } else {
+            passwordField.type = "password";
+            icon.classList.remove("fa-eye");
+            icon.classList.add("fa-eye-slash");
+        }
+    });
+
+</script>
